Bug 291452 - Muon crashes when browsing updating components info
Summary: Muon crashes when browsing updating components info
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 289984 290230 292914 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-13 15:26 UTC by Eugene
Modified: 2016-03-02 13:28 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eugene 2012-01-13 15:26:56 UTC
Application: muon-updater (1.2.80 "Daring Dalek")
KDE Platform Version: 4.7.4 (4.7.4)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-14-generic x86_64
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed:
I'm just read the updating components infomation when crash happend.

-- Backtrace:
Application: Програма для керування оновленнями Muon (muon-updater), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f90d2ad1780 (LWP 2855))]

Thread 3 (Thread 0x7f90bf54e700 (LWP 2856)):
#0  0x00007f90cb77503e in __pthread_mutex_lock (mutex=0x252c168) at pthread_mutex_lock.c:62
#1  0x00007f90caca5044 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f90caca5429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f90d0ea8f3e in QEventDispatcherGlib::processEvents (this=0x252c010, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f90d0e7ccf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f90d0e7cef7 in QEventLoop::exec (this=0x7f90bf54ddd0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007f90d0d9427f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#7  0x00007f90d0e5fcbf in QInotifyFileSystemWatcherEngine::run (this=0x256d840) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f90d0d96d05 in QThreadPrivate::start (arg=0x256d840) at thread/qthread_unix.cpp:331
#9  0x00007f90cb772efc in start_thread (arg=0x7f90bf54e700) at pthread_create.c:304
#10 0x00007f90cfa6d89d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f90bc879700 (LWP 2859)):
#0  0x00007f90cb775034 in __pthread_mutex_lock (mutex=0x2882c08) at pthread_mutex_lock.c:61
#1  0x00007f90caca4023 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f90caca4dfd in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f90caca5429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f90d0ea8f3e in QEventDispatcherGlib::processEvents (this=0x2864890, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007f90d0e7ccf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f90d0e7cef7 in QEventLoop::exec (this=0x7f90bc878dd0, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007f90d0d9427f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#8  0x00007f90d0e5fcbf in QInotifyFileSystemWatcherEngine::run (this=0x28824d0) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007f90d0d96d05 in QThreadPrivate::start (arg=0x28824d0) at thread/qthread_unix.cpp:331
#10 0x00007f90cb772efc in start_thread (arg=0x7f90bc879700) at pthread_create.c:304
#11 0x00007f90cfa6d89d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f90d2ad1780 (LWP 2855)):
[KCrash Handler]
#6  QApt::Package::sourcePackage (this=0x0) at /build/buildd/qapt-1.2.80/src/package.cpp:253
#7  0x0000000000412c95 in ChangelogWidget::changelogFetched (this=0x26b1190, job=0x37c7dd0) at /build/buildd/muon-1.2.80/updater/ChangelogWidget.cpp:174
#8  0x000000000040f2e4 in ChangelogWidget::qt_metacall (this=0x26b1190, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fffd862a8b0) at /build/buildd/muon-1.2.80/obj-x86_64-linux-gnu/updater/moc_ChangelogWidget.cpp:88
#9  0x00007f90d0e90eba in QMetaObject::activate (sender=0x37c7dd0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffd862a8b0) at kernel/qobject.cpp:3278
#10 0x00007f90d12e3622 in KJob::result (this=<optimized out>, _t1=0x37c7dd0) at ./kjob.moc:194
#11 0x00007f90d12e3660 in KJob::emitResult (this=0x37c7dd0) at ../../kdecore/jobs/kjob.cpp:312
#12 0x00007f90d230c6fa in KIO::FileCopyJob::slotResult (this=0x37c7dd0, job=0x26c31b0) at ../../kio/kio/job.cpp:2449
#13 0x00007f90d230c4a0 in KIO::FileCopyJob::qt_metacall (this=0x37c7dd0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fffd862aa20) at ./jobclasses.moc:724
#14 0x00007f90d0e90eba in QMetaObject::activate (sender=0x26c31b0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffd862aa20) at kernel/qobject.cpp:3278
#15 0x00007f90d12e3622 in KJob::result (this=<optimized out>, _t1=0x26c31b0) at ./kjob.moc:194
#16 0x00007f90d12e3660 in KJob::emitResult (this=0x26c31b0) at ../../kdecore/jobs/kjob.cpp:312
#17 0x00007f90d2304d94 in KIO::SimpleJob::slotFinished (this=0x26c31b0) at ../../kio/kio/job.cpp:494
#18 0x00007f90d230c94d in KIO::TransferJob::slotFinished (this=0x26c31b0) at ../../kio/kio/job.cpp:1081
#19 0x00007f90d230b2b1 in KIO::TransferJob::qt_metacall (this=0x26c31b0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fffd862add0) at ./jobclasses.moc:369
#20 0x00007f90d0e90eba in QMetaObject::activate (sender=0x3777240, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3278
#21 0x00007f90d23b3081 in KIO::SlaveInterface::dispatch (this=<optimized out>, _cmd=104, rawdata=...) at ../../kio/kio/slaveinterface.cpp:172
#22 0x00007f90d23aff35 in KIO::SlaveInterface::dispatch (this=0x3777240) at ../../kio/kio/slaveinterface.cpp:88
#23 0x00007f90d23a30fe in KIO::Slave::gotInput (this=0x3777240) at ../../kio/kio/slave.cpp:344
#24 0x00007f90d23a385c in KIO::Slave::qt_metacall (this=0x3777240, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fffd862b200) at ./slave.moc:82
#25 0x00007f90d0e90eba in QMetaObject::activate (sender=0x375e770, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3278
#26 0x00007f90d22d5827 in dequeue (this=<optimized out>) at ../../kio/kio/connection.cpp:82
#27 KIO::ConnectionPrivate::dequeue (this=0x3767430) at ../../kio/kio/connection.cpp:71
#28 0x00007f90d22d58cd in KIO::Connection::qt_metacall (this=0x375e770, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x36561d0) at ./connection.moc:79
#29 0x00007f90d0e94a5e in QObject::event (this=0x375e770, e=<optimized out>) at kernel/qobject.cpp:1217
#30 0x00007f90d022e424 in notify_helper (e=0x361a2e0, receiver=0x375e770, this=0x23dd600) at kernel/qapplication.cpp:4486
#31 QApplicationPrivate::notify_helper (this=0x23dd600, receiver=0x375e770, e=0x361a2e0) at kernel/qapplication.cpp:4458
#32 0x00007f90d0233291 in QApplication::notify (this=0x7fffd862bab0, receiver=0x375e770, e=0x361a2e0) at kernel/qapplication.cpp:4365
#33 0x00007f90d18b3466 in KApplication::notify (this=0x7fffd862bab0, receiver=0x375e770, event=0x361a2e0) at ../../kdeui/kernel/kapplication.cpp:311
#34 0x00007f90d0e7dafc in QCoreApplication::notifyInternal (this=0x7fffd862bab0, receiver=0x375e770, event=0x361a2e0) at kernel/qcoreapplication.cpp:787
#35 0x00007f90d0e8151f in sendEvent (event=0x361a2e0, receiver=0x375e770) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#36 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x23acac0) at kernel/qcoreapplication.cpp:1428
#37 0x00007f90d0ea8a73 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#38 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:277
#39 0x00007f90caca4a5d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#40 0x00007f90caca5258 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#41 0x00007f90caca5429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#42 0x00007f90d0ea8ed6 in QEventDispatcherGlib::processEvents (this=0x23ae5d0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#43 0x00007f90d02d607e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#44 0x00007f90d0e7ccf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#45 0x00007f90d0e7cef7 in QEventLoop::exec (this=0x7fffd862ba40, flags=...) at kernel/qeventloop.cpp:201
#46 0x00007f90d0e81789 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#47 0x000000000040ee57 in main (argc=1, argv=0x7fffd862bd28) at /build/buildd/muon-1.2.80/updater/main.cpp:61

Reported using DrKonqi
Comment 1 Jonathan Thomas 2012-01-20 22:48:28 UTC
Git commit cf716d2100caf9dbb7a635aefda4089d273fafb4 by Jonathan Thomas.
Committed on 20/01/2012 at 23:40.
Pushed by jmthomas into branch 'master'.

Do not null the package pointer when hiding the changelog widget.
If it hasn't downloaded the changelog yet, it will crash when the changelog is downloaded.
FIXED-IN:1.2.95

M  +0    -1    updater/ChangelogWidget.cpp

http://commits.kde.org/muon/cf716d2100caf9dbb7a635aefda4089d273fafb4
Comment 2 Jonathan Thomas 2012-01-28 17:22:55 UTC
*** Bug 290230 has been marked as a duplicate of this bug. ***
Comment 3 Jonathan Thomas 2012-01-30 23:27:30 UTC
Hmm, not quite fixed yet.
Comment 4 Jonathan Thomas 2012-01-30 23:28:49 UTC
*** Bug 289984 has been marked as a duplicate of this bug. ***
Comment 5 Jonathan Thomas 2012-01-30 23:30:07 UTC
*** Bug 292914 has been marked as a duplicate of this bug. ***
Comment 6 Jonathan Thomas 2012-02-22 01:16:50 UTC
Git commit b1b9d0411ce3336b2f9677a49422fb89b9e5b648 by Jonathan Thomas.
Committed on 22/02/2012 at 02:15.
Pushed by jmthomas into branch '1.3'.

Do not respond to changelogFetched events when we have no package set in the ChangelogWidget.
FIXED-IN:1.3.0

M  +3    -0    updater/ChangelogWidget.cpp

http://commits.kde.org/muon/b1b9d0411ce3336b2f9677a49422fb89b9e5b648
Comment 7 Jonathan Thomas 2012-02-22 01:16:51 UTC
Git commit 1c7d71fc3c7e6936cd285fef9e010d801434bd8f by Jonathan Thomas.
Committed on 22/02/2012 at 02:15.
Pushed by jmthomas into branch 'master'.

Do not respond to changelogFetched events when we have no package set in the ChangelogWidget.
FIXED-IN:1.3.0

M  +3    -0    updater/ChangelogWidget.cpp

http://commits.kde.org/muon/1c7d71fc3c7e6936cd285fef9e010d801434bd8f