Do not null the package pointer when hiding the changelog widget. If it hasn't downloaded the changelog yet, it will crash when the changelog is downloaded.

BUG:291452
FIXED-IN:1.2.95